--- a/Preconstruction.html
+++ b/Preconstruction.html
@@ -327,26 +327,161 @@
                         <img src="assets/images/service/17.webp" alt="service">
                     </div>
                     <div class="service-details-inner-area-wrapper">
-                        <h4 class="title">How We Do It</h4>
+                        <h4 class="title">Strategic Preconstruction Planning</h4>
                         <p class="disc">
-                            Building a custom home is a dream for many, and at Elever, we believe that the journey to
-                            achieving that dream should be as inspiring as the end result. Our Custom Home Building
-                            service is designed with you in mind, combining expert craftsmanship, the highest-quality
-                            materials, and a commitment to excellence in every phase of construction. From the initial
-                            concept discussions to the final touches, our dedicated team is here to guide you through
-                            the process, ensuring your new home is a reflection of your vision, lifestyle, and unique
-                            personality.
+                            Successful construction projects begin long before the first shovel hits the ground. At Takes Two Construction, our preconstruction services lay the foundation for project success through comprehensive planning, detailed analysis, and strategic decision-making. We collaborate with owners, architects, and design teams to optimize project outcomes while minimizing risks and maximizing value.
+                        </p>
+                        <p class="disc">
+                            Our preconstruction team brings decades of construction expertise to the planning phase, identifying opportunities for cost savings, schedule optimization, and constructability improvements. Through detailed analysis and collaborative planning, we help ensure your project is set up for success from day one.
+                        </p>
+                        <div class="service-main-wrapper-tabs">
+                            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link active" id="home-tab" data-bs-toggle="tab"
+                                        data-bs-target="#home" type="button" role="tab" aria-controls="home"
+                                        aria-selected="true">Our Preconstruction Services</button>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="profile-tab" data-bs-toggle="tab"
+                                        data-bs-target="#profile" type="button" role="tab" aria-controls="profile"
+                                        aria-selected="false">Preconstruction Benefits</button>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="contact-tab" data-bs-toggle="tab"
+                                        data-bs-target="#contact" type="button" role="tab" aria-controls="contact"
+                                        aria-selected="false">Our Preconstruction Process</button>
+                                </li>
+                            </ul>
+                            <div class="tab-content" id="myTabContent">
+                                <div class="tab-pane fade show active" id="home" role="tabpanel"
+                                    aria-labelledby="home-tab">
+                                    <div class="inner-wrapper-tab-service-wrapper">
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Design Development & Value Engineering:</b> We work closely with design teams to optimize building systems, materials, and construction methods while maintaining design intent and improving project value through cost-effective solutions.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Cost Estimating & Budget Development:</b> Our detailed cost analysis provides accurate project budgets with comprehensive breakdowns, allowing for informed decision-making and effective cost control throughout the project lifecycle.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Schedule Planning & Logistics:</b> We develop realistic project schedules that account for design phases, permitting, procurement, and construction activities while identifying critical path items and potential schedule risks.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Constructability Reviews:</b> Our experienced construction professionals review designs for buildability, identifying potential construction challenges and recommending solutions before they impact the project schedule or budget.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Permit & Regulatory Coordination:</b> We navigate complex permitting processes, coordinate with regulatory agencies, and ensure all approvals are secured efficiently to prevent project delays.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 
-                        </p>
-                        <p class="disc">
-                            The journey to a custom home begins with understanding. We start each project with an
-                            initial consultation to learn about your goals, ideas, and preferences. During this stage,
-                            we take the time to listen carefully to your vision. Are you seeking a sprawling estate with
-                            traditional details, or perhaps a modern, minimalist design that emphasizes open spaces and
-                            natural light? We discuss every aspect, from the overall structure to the small details that
-                            make a house truly feel like home.
-                        </p>
-                        
+                                    <div class="inner-wrapper-tab-service-wrapper">
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Risk Mitigation:</b> Early identification and resolution of potential issues saves time, money, and prevents costly changes during construction.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Cost Certainty:</b> Detailed preconstruction planning provides accurate budgets and reduces the likelihood of cost overruns during construction.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Schedule Optimization:</b> Thorough planning and coordination result in more efficient construction schedules and on-time project delivery.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Enhanced Collaboration:</b> Early contractor involvement improves communication between all project stakeholders and leads to better project outcomes.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+
+                                    <div class="inner-wrapper-tab-service-wrapper">
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Project Assessment:</b> We begin with comprehensive project evaluation, understanding your goals, requirements, and constraints to develop a strategic approach tailored to your specific needs.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Design Collaboration:</b> Our team works closely with architects and engineers during design development, providing constructability input and value engineering recommendations.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Cost & Schedule Development:</b> We prepare detailed cost estimates and realistic project schedules, identifying critical milestones and potential risks early in the process.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Procurement Planning:</b> We develop procurement strategies for major building systems and long-lead items, ensuring materials and equipment are available when needed.
+                                            </div>
+                                        </div>
+                                        <div class="single">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-check"></i>
+                                            </div>
+                                            <div class="inner-content">
+                                                <b>Construction Readiness:</b> We ensure all permits, approvals, and documentation are in place before construction begins, setting the stage for smooth project execution.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -378,8 +513,8 @@
                         <div class="title-wrapper-left mb--50">
                             <span class="pre">How We Works</span>
                             <h2 class="title">
-                                How TTC Works For You <br>
-                                Construction Builder
+                                How TTC Preconstruction <br>
+                                Sets Projects Up for Success
                             </h2>
                         </div>
                         <div class="single-choose-us-one">
@@ -389,8 +524,7 @@
                             </div>
                             <div class="info-wrapper">
                                 <h5 class="title">Consultation & Planning</h5>
-                                <p class="disc">We begin with a thorough consultation to understand your vision, budget,
-                                    and project goals. Our team works with you to develop a tailored plan</p>
+                                <p class="disc">We conduct comprehensive project assessment, stakeholder interviews, and requirements analysis to establish clear project objectives, scope definition, and success criteria for optimal planning.</p>
                             </div>
                         </div>
                         <div class="single-choose-us-one">
@@ -400,8 +534,7 @@
                             </div>
                             <div class="info-wrapper">
                                 <h5 class="title">Design & Pre-Construction</h5>
-                                <p class="disc">We begin with a thorough consultation to understand your vision, budget,
-                                    and project goals. Our team works with you to develop a tailored plan</p>
+                                <p class="disc">Our team provides constructability reviews, value engineering, cost estimating, and schedule development while coordinating design phases and permit processes for seamless project progression.</p>
                             </div>
                         </div>
                         <div class="single-choose-us-one">
@@ -411,8 +544,7 @@
                             </div>
                             <div class="info-wrapper">
                                 <h5 class="title">Construction & Delivery</h5>
-                                <p class="disc">We begin with a thorough consultation to understand your vision, budget,
-                                    and project goals. Our team works with you to develop a tailored plan</p>
+                                <p class="disc">With comprehensive planning complete, we transition seamlessly into construction with optimized schedules, vetted contractors, and detailed project documentation ensuring efficient execution and successful delivery.</p>
                             </div>
                         </div>
                     </div>
@@ -430,13 +562,11 @@
                 <div class="col-lg-12">
                     <div class="call-to-action-area-service bg_image">
                         <div class="inner">
-                            <h3 class="title">Ready to work together</h3>
+                            <h3 class="title">Strategic Preconstruction Planning</h3>
                             <p class="disc">
-                                Whether you have a project in mind and you're looking for a reliable construction
-                                partner or you're looking to take the next step in your career, we want to hear from
-                                you!
+                                Set your project up for success with comprehensive preconstruction services. Our strategic planning approach ensures optimal outcomes through detailed analysis, collaborative design, and proactive risk management.
                             </p>
-                            <a href="index.html#" class="rts-btn btn-primary">Make An Appointment</a>
+                            <a href="contact.html" class="rts-btn btn-primary">Start Your Project</a>
                         </div>
                     </div>
                 </div>
