Implement comprehensive website search functionality

--- a/Project-management.html
+++ b/Project-management.html
@@ -787,6 +787,7 @@
 
 <script src="assets/js/plugins/contact.form.js"></script>
 
+<script src="assets/js/search.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 
