--- a/job-description.html
+++ b/job-description.html
@@ -654,6 +654,7 @@
     <script src="assets/js/vendor/waw.js"></script>
     <script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/plugins/contact.form.js"></script>
+    <script src="assets/js/search.js"></script>
     <script src="assets/js/main.js"></script>
 
     <!-- Job Description Page Script -->
