--- a/Custom-pools-spas.html
+++ b/Custom-pools-spas.html
@@ -723,6 +723,7 @@
 
 <script src="assets/js/plugins/contact.form.js"></script>
 
+<script src="assets/js/search.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 
