--- a/careers.html
+++ b/careers.html
@@ -833,6 +833,7 @@
 <script src="assets/js/plugins/contact.form.js"></script>
 
 <script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
+<script src="assets/js/search.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 
